--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,23 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  node: circleci/node@4.7
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+jobs:
+  build-and-push:
+    docker:
+      - image: circleci/node:12.16
+    steps:
+      - checkout
+      - run: echo 'DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME' >> $BASH_ENV
+      - run: echo 'DOCKER_HUB_PASSWORD=$DOCKER_HUB_PASSWORD' >> $BASH_ENV
+      - setup_remote_docker
+      - run:
+          name: Build Docker images
+          command: |
+            docker-compose -f docker-compose-build.yaml build --parallel
+          environment:
+            DOCKER_BUILDKIT: 1
+      - run:
+          name: Push Docker images
+          command: |
+            echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
+            docker-compose push
+          environment:
+            DOCKER_BUILDKIT: 1
