--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
       - image: circleci/node:12.16
     steps:
       - checkout
-      - run: echo 'DOCKER_HUB_USERNAME=$DOCKERHUB_USERNAME' >> $BASH_ENV
-      - run: echo 'DOCKER_HUB_PASSWORD=$DOCKERHUB_PASSWORD' >> $BASH_ENV
+      - run: echo 'DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME' >> $BASH_ENV
+      - run: echo 'DOCKER_HUB_PASSWORD=$DOCKER_HUB_PASSWORD' >> $BASH_ENV
       - setup_remote_docker
       - run:
           name: Build Docker images
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: Push Docker images
           command: |
-            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+            echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
             docker-compose push
           environment:
             DOCKER_BUILDKIT: 1
