--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
       - image: circleci/node:12.16
     steps:
       - checkout
+      - run: echo $DOCKER_HUB_USERNAME
+      - run: echo $DOCKER_HUB_PASSWORD
       - run: echo 'DOCKER_HUB_USERNAME=$DOCKER_HUB_USERNAME'
       - run: echo 'DOCKER_HUB_PASSWORD=$DOCKER_HUB_PASSWORD'
       - setup_remote_docker
