--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,10 @@ jobs:
             docker tag  udagram-api-user backenddocker2022/udagram-api-user:v1
             docker tag  udagram-frontend:local backenddocker2022/udagram-frontend:v1
             docker tag  reverseproxy backenddocker2022/reverseproxy:v1
-            docker-compose push
+            docker push backenddocker2022/udagram-api-feed:v1
+            docker push backenddocker2022/udagram-api-user:v1
+            docker push backenddocker2022/udagram-frontend:v1
+            docker push backenddocker2022/reverseproxy:v1
           environment:
             DOCKER_BUILDKIT: 1
 workflows:
