--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
             docker tag  udagram-api-feed backenddocker2022/udagram-api-feed:v1
             docker tag  udagram-api-user backenddocker2022/udagram-api-user:v1
-            docker tag  udagram-frontend:local backenddocker2022/udagram-frontend:v6a
+            docker tag  udagram-frontend:local backenddocker2022/udagram-frontend:v6
             docker tag  reverseproxy backenddocker2022/reverseproxy:v1
             docker push backenddocker2022/udagram-api-feed:v1
             docker push backenddocker2022/udagram-api-user:v1
